<resources>
    <string name="app_name">QIWEI_EXPERIMENT_01</string>
    <string name="open_fragment">Click button to open fragment.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_of_button_press">The total times you pressed the \'Press me\' button is</string>
    <string name="action_press_me">Press Me</string>


    <!-- Widget Playground -->
    <string name="label_text_widgets">Text Widgets</string>
    <string name="label_btn_widgets">Button Widgets</string>

    <string name="title_widget_playground">Widget Playground</string>
    <string name="title_text_widget_playground">Text Widget Playground</string>
    <string name="title_list_view_playground">List View Playground</string>
    <string name="title_recycler_view_playground">Recycler View Playground</string>
    <string name="title_horizontal_recycler_view_playground">Horizontal Recycler View Playground</string>
    <string name="title_grid_recycler_view_playground">Grid Recycler View Playground</string>
    <string name="list_view">List View</string>
    <string name="recycler_view">Recycler View (V1)</string>
    <string name="horizontal_recycler_view">Recycler View (Horizontal)</string>
    <string name="grid_recycler_view_vertical">Grid Recycler View (Vertical)</string>
    <string name="grid_recycler_view_horizontal">Grid Recycler View (Horizontal)</string>
</resources>