<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QWMainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <Button
            android:id="@+id/btnTextWidgets"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_height="wrap_content"
            android:text="@string/label_text_widgets" />

        <Button
            android:id="@+id/btnButtons"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_widgets" />

        <Button
            android:id="@+id/btnListView"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_height="wrap_content"
            android:text="@string/list_view" />

        <Button
            android:id="@+id/btnRvView"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_height="wrap_content"
            android:text="@string/linear_recycler_view_vertical" />

        <Button
            android:id="@+id/btnHRvView"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_height="wrap_content"
            android:text="@string/linear_recycler_view_horizontal" />

        <Button
            android:id="@+id/btnGridRvView"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_height="wrap_content"
            android:text="@string/grid_recycler_view_vertical" />

        <Button
            android:id="@+id/btnGridHRvView"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_height="wrap_content"
            android:text="@string/grid_recycler_view_horizontal" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>